src/sass/frontend.scss
body {
	--corner-svg-tl: url('data:image/svg+xml,<svg width="100%" height="100%" viewBox="0 0 2134 2134" version="1.1" xmlns="http://www.w3.org/2000/svg" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><path d="M0,1651.36l0,-1651.36l2132.21,-0l-0,412.419l-533.172,-0c-73.098,283.383 -220.885,544.807 -431.349,755.272c-309.691,309.691 -729.722,483.673 -1167.69,483.673Z" style="fill:%23ebebeb;"/></svg>');
	--corner-svg-tr: url('data:image/svg+xml,<svg width="100%" height="100%" viewBox="0 0 2134 2134" version="1.1" xmlns="http://www.w3.org/2000/svg" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><path d="M2132.21,1651.36l-0,-1651.36l-2132.21,-0l0,412.419l533.172,-0c73.097,283.383 220.885,544.807 431.349,755.272c309.691,309.691 729.722,483.673 1167.69,483.673Z" style="fill:%23ebebeb;"/></svg>');
	--corner-svg-bl: url('data:image/svg+xml,<svg width="100%" height="100%" viewBox="0 0 2134 2134" version="1.1" xmlns="http://www.w3.org/2000/svg" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><path d="M0,481.969l-0,1651.36l2132.21,0l-0,-412.419l-533.172,0c-73.098,-283.382 -220.885,-544.807 -431.349,-755.271c-309.691,-309.691 -729.722,-483.674 -1167.69,-483.674Z" style="fill:%23ebebeb;"/></svg>');
	--corner-svg-br: url('data:image/svg+xml,<svg width="100%" height="100%" viewBox="0 0 2134 2134" version="1.1" xmlns="http://www.w3.org/2000/svg" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><path d="M2132.21,481.969l-0,1651.36l-2132.21,0l0,-412.419l533.172,0c73.097,-283.382 220.885,-544.807 431.349,-755.271c309.691,-309.691 729.722,-483.674 1167.69,-483.674Z" style="fill:%23ebebeb;"/></svg>');
	--corner-size: 0.8rem 0.8rem;
	--corner-mask: var(--square-svg) -2% -2% / auto 102% repeat-x,
		var(--corner-svg-tl) -2% -2% / var(--corner-size) no-repeat,
		var(--corner-svg-tr) 102% -2% / var(--corner-size) no-repeat,
		var(--corner-svg-bl) -2% 102% / var(--corner-size) no-repeat,
		var(--corner-svg-br) 102% 102% / var(--corner-size) no-repeat;
	--square-svg: url('data:image/svg+xml,<svg width="100%" height="100%" viewBox="0 0 2134 2134" version="1.1" xmlns="http://www.w3.org/2000/svg" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><rect x="0" y="0" width="2133.33" height="2133.33" style="fill:%23ebebeb;"/></svg>');
	&:before {
		//overlay lights
		content: '';
		z-index: 5000;
		position: fixed;
		top: 10%;
		left: 10%;
		height: 80%;
		width: 80%;
		background-color: #e7b031;
		border-radius: 100%;
		mix-blend-mode: overlay;
		filter: blur(100px);
		opacity: 0.4;
		pointer-events: none;
	}
	&:after {
		content: '';
		z-index: 4000;
		position: fixed;
		top: 0;
		left: 0;
		height: 100%;
		width: 100%;
		box-shadow: 0 0 150px rgba(0, 0, 0, 0.5) inset;
		pointer-events: none;
	}
}
.btn,
button:not(.foh-display__button) {
	position: relative;
	color: var(--wp--preset--color--contrast) !important;
	//hack: border color
	background-color: var(--wp--preset--color--contrast) !important;
	//hack: background color
	&:after {
		content: '';
		z-index: -1;
		position: absolute;
		top: 2px;
		left: 2px;
		height: calc(100% - 4px);
		width: calc(100% - 4px);
		mask: var(--corner-mask);
		mask-composite: exclude;
		background-color: var(--wp--preset--color--green);
	}
	border-radius: 0;
	border: none;
	padding: 0.4rem 2rem;

	mask: var(--corner-mask);
	mask-composite: exclude;
	transition: all 0.15s ease-out;
	&:hover {
		border: none;
		background-color: var(--wp--preset--color--contrast);
		filter: brightness(1.3);
	}
}
.foh-display__button {
	text-align: left;
	opacity: 1;
	color: var(--wp--preset--color--secondary);
}

$border: 3px solid var(--wp--preset--color--secondary);

div.wpforms-container {
	.wpforms-field-label {
		color: var(--wp--preset--color--contrast);
	}
	.wpforms-field-sublabel {
		color: var(--wp--preset--color--contrast);
	}
	input[type],
	textarea {
		background: var(--wp--preset--color--base);
		border: none;
		border-radius: 0;
		border-bottom: 2px solid var(--wp--preset--color--secondary);
	}
	button[type] {
		border-radius: 0;
	}
}
.temp-contact-container {
	padding-top: var(--wp--custom--gapo--m) !important;
	padding-bottom: var(--wp--custom--gapo--l) !important;
	margin-bottom: var(--wp--custom--gapo--xl) !important;
	&:before {
		content: '';
		z-index: -1;
		position: absolute;
		border-top: $border;
		border-bottom: $border;
		background-color: var(--wp--preset--color--primary);
		opacity: 0.5;
		mask: linear-gradient(
			90deg,
			rgba(0, 0, 0, 0) 0%,
			rgba(0, 0, 0, 1) 15%,
			rgba(0, 0, 0, 1) 85%,
			rgba(0, 0, 0, 0) 100%
		);
		width: 100vw;
		height: 100%;
		top: 0;
		left: 50%;
		transform: translate(-50%);
	}
	position: relative;
}
.temp-beg-container {
	@media screen and (max-width: 782px) {
		& > .wp-block-columns {
			& > :first-child {
				position: relative;
				padding-bottom: var(--wp--custom--gapo--l);
				&:before {
					content: '';
					z-index: -1;
					position: absolute;
					width: 100vw;
					top: 0;
					height: calc(100% + var(--wp--custom--gapo--m));
					left: 50%;
					transform: translate(-50%);
					margin-top: calc(var(--wp--custom--gapo--m) * -1);
					opacity: 0.5;
					mask: linear-gradient(
						90deg,
						rgba(0, 0, 0, 0) 0%,
						rgba(0, 0, 0, 1) 15%,
						rgba(0, 0, 0, 1) 85%,
						rgba(0, 0, 0, 0) 100%
					);
					background: var(--wp--preset--color--primary) 50%;
					border-top: $border;
					border-bottom: $border;
				}
			}
			& > :last-child {
				position: relative;
				padding-top: var(--wp--custom--gapo--l);
				&:before {
					content: '';
					z-index: -1;
					position: absolute;
					width: 100vw;
					top: 0;
					height: calc(100% + var(--wp--custom--gapo--xl));
					left: 50%;
					transform: translate(-50%);
					opacity: 0.5;
					mask: linear-gradient(
						90deg,
						rgba(0, 0, 0, 0) 0%,
						rgba(0, 0, 0, 1) 15%,
						rgba(0, 0, 0, 1) 85%,
						rgba(0, 0, 0, 0) 100%
					);
					background: radial-gradient(
						circle,
						rgba(0, 0, 0, 0.7) 0%,
						rgba(0, 0, 0, 0.2) 100%
					);
					border-top: $border;
					border-bottom: $border;
				}
			}
		}
	}
	@media screen and (min-width: 782px) {
		position: relative;
		&:before {
			content: '';
			z-index: -1;
			position: absolute;
			width: 100vw;
			top: 0;
			height: 100%;
			left: 50%;
			transform: translate(-50%);
			opacity: 0.5;
			mask: linear-gradient(
				90deg,
				rgba(0, 0, 0, 0) 0%,
				rgba(0, 0, 0, 1) 15%,
				rgba(0, 0, 0, 1) 85%,
				rgba(0, 0, 0, 0) 100%
			);
			background: linear-gradient(
				90deg,
				var(--wp--preset--color--primary) 50%,
				var(--wp--preset--color--base) 50%
			);
			border-top: $border;
			border-bottom: $border;
		}
	}
}
.temp-map-container {
	padding-bottom: var(--wp--custom--gapo--l);
	&:before {
		content: '';
		z-index: -1;
		position: absolute;
		border-bottom: $border;
		background-color: var(--wp--preset--color--primary);
		opacity: 0.5;
		mask: linear-gradient(
				90deg,
				rgba(0, 0, 0, 0) 0%,
				rgba(0, 0, 0, 1) 15%,
				rgba(0, 0, 0, 1) 85%,
				rgba(0, 0, 0, 0) 100%
			),
			linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1) 50%);
		mask-composite: intersect;
		width: 100vw;
		height: 100%;
		top: 0;
		@media screen and (min-width: 782px) {
			top: -6rem;
		}
		left: 50%;
		transform: translate(-50%);
	}
	position: relative;
}
.wp-block-mptab-map .leaflet-container {
	border: $border;
}
.small-gap {
	margin-bottom: var(--wp--custom--gapo--xs);
}
.no-top {
	margin-top: 0;
}

